After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667081 - Can't calibrate Canon SLR camera or webcam with QP201 calibration card
Can't calibrate Canon SLR camera or webcam with QP201 calibration card
Status: RESOLVED FIXED
Product: gnome-color-manager
Classification: Core
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-color-manager-maint
gnome-color-manager-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-31 23:23 UTC by Máirín Duffy
Modified: 2012-01-09 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Máirín Duffy 2011-12-31 23:23:45 UTC
I bought a QP201 calibration card for my Canon SLR. I'm running Fedora 16, and there are no updates available for gnome-color-manager or any seemingly-related color management tools I have installed.

I took a picture of the QP201 with my Canon. I attached the Canon to my computer via USB.

I opened up gnome-color-manager. I selected my Canon in the device list and clicked on 'Calibrate...'. I tried 'Quick', 'Normal', and 'Accurate' during separate attempts. I selected the QP201 card under calibration targets. I clicked next. I get a screen that says:

"[header] Failed to calibrate  [dialog text] failed to match display"

Then I noticed this error happens if I select the integrated webcam on my laptop as well. So it seems unrelated to the camera. (At first I thought maybe Shotwell was locking the Canon, but that the bug happens for the webcam too I think eliminates that possibility.)
Comment 1 Richard Hughes 2012-01-04 09:45:09 UTC
I can reproduce. Just working out the problem...
Comment 2 Richard Hughes 2012-01-04 10:10:24 UTC
Got it:

commit 573cc0a1f5ba9eb78a13fbb88dcba20f3ac32857
Author: Richard Hughes <richard@hughsie.com>
Date:   Wed Jan 4 10:07:06 2012 +0000

    Actually enable the non-display calibrate codepath
    
    Resolves https://bugzilla.gnome.org/show_bug.cgi?id=667081

:100644 100644 16cf21e... 834e790... M  src/gcm-calibrate-main.c

I'll fix another bug today and then roll an upstream update towards the end of the week. Thanks for reporting this.
Comment 3 Máirín Duffy 2012-01-04 14:28:11 UTC
Hughsie, that is awesome, thank you *so* much.