Actually enable the non-display calibrate codepath

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=667081